<resources>
    <string name="app_name">MoneyManagement</string>
    <string name="add_expense">add expense</string>
    <string name="remove_expense">remove expense</string>
    <string name="update_expense">update expense</string>
    <string name="add_income">add income</string>
    <string name="update_income">update income</string>
    <string name="remove_income">remove income</string>
    <string name="show_all_incomes_expenses"><![CDATA[show all incomes&expenses]]></string>
    <string name="show_analysis">show analysis</string>
    <string name="goals">goals</string>
    <string name="name_string">Name</string>
    <string name="label_name">Label</string>
    <string name="add_name">add</string>
    <string name="date_name">Date</string>
    <string name="price_name">Price</string>
</resources>
