<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/incomes_options"
        android:layout_width="376dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expenses_options"
        app:layout_constraintVertical_bias="0.103">

        <Button
            android:id="@+id/add_income"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/add_income"
            android:textSize="10sp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="118dp"
            android:layout_height="wrap_content"
            android:text="@string/update_income"
            android:textSize="10sp" />

        <Button
            android:id="@+id/remove_income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_income"
            android:textSize="10sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/expenses_options"
        android:layout_width="376dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16">

        <Button
            android:id="@+id/add_expense"
            android:layout_width="119dp"
            android:layout_height="wrap_content"
            android:text="@string/add_expense"
            android:textSize="10sp" />

        <Button
            android:id="@+id/update_expense"
            android:layout_width="119dp"
            android:layout_height="wrap_content"
            android:text="@string/update_expense"
            android:textSize="10sp" />

        <Button
            android:id="@+id/remove_expense"
            android:layout_width="118dp"
            android:layout_height="wrap_content"
            android:text="@string/remove_expense"
            android:textSize="10sp" />

    </LinearLayout>

    <Button
        android:id="@+id/show_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_all_incomes_expenses"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.773" />

    <Button
        android:id="@+id/goals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="141dp"
        android:layout_marginBottom="340dp"
        android:text="@string/goals"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/show_analysis"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/incomes_options" />

    <Button
        android:id="@+id/show_analysis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="141dp"
        android:layout_marginBottom="340dp"
        android:text="@string/show_analysis"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.784"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/incomes_options"
        app:layout_constraintVertical_bias="0.496" />

</androidx.constraintlayout.widget.ConstraintLayout>